# uebung_db2

./: .gitignore  CMakeLists.txt  Makefile  Makefile.common  build.txt  build_cygwin.txt  build_mac.txt  clion.txt  log4c++.hubDB.properties.client  log4c++.hubDB.properties.server  setenvHubDB.sh
DBApp/: Makefile  hubDBClient.cpp  hubDBServer.cpp  hubDBTestBufMgrFrame.cpp  hubDBTestIndex.cpp  hubDBTestIndex2.cpp
DBLib/: DBBACB.cpp  DBBCB.cpp  DBBufferMgr.cpp  DBClient.cpp  DBClientSocket.cpp  DBException.cpp  DBFile.cpp  DBFileBlock.cpp  DBFileMgr.cpp  DBIndex.cpp  DBLexer.cpp  DBLexer.lex  DBLock.cpp  DBManager.cpp  DBMonitorMgr.cpp  DBMutex.cpp  DBMyBufferMgr.cpp  DBMyIndex.cpp  DBMyIndex2.cpp  DBMyQueryMgr.cpp  DBParser.cpp  DBParser.dot  DBParser.y  DBQueryMgr.cpp  DBRandomBufferMgr.cpp  DBServer.cpp  DBServerSocket.cpp  DBSimpleQueryMgr.cpp  DBSocket.cpp  DBSysCatMgr.cpp  DBTable.cpp  DBTypes.cpp  Makefile  TestClass.cpp
DBTst/: testBufferMgrMin.sh  testIndexMin.sh  testQueryMgrMin.sh
TESTEN123/: TESTTABELLE.db  syscat.db
include/hubDB/: DBBACB.h  DBBCB.h  DBBufferMgr.h  DBClient.h  DBClientSocket.h  DBException.h  DBFile.h  DBFileBlock.h  DBFileMgr.h  DBIndex.h  DBLexer.h  DBLock.h  DBManager.h  DBMonitorMgr.h  DBMutex.h  DBMyBufferMgr.h  DBMyIndex.h  DBMyIndex2.h  DBMyQueryMgr.h  DBParser.h  DBParserDefs.h  DBQueryMgr.h  DBRandomBufferMgr.h  DBSeqIndex.h  DBServer.h  DBServerSocket.h  DBSimpleQueryMgr.h  DBSocket.h  DBSysCatMgr.h  DBTable.h  DBTypes.h
include/log4cxx/: Makefile
include/log4cxx/config/: Makefile
include/log4cxx/db/: Makefile
include/log4cxx/filter/: Makefile
include/log4cxx/helpers/: Makefile
include/log4cxx/net/: Makefile
include/log4cxx/nt/: Makefile
include/log4cxx/pattern/: Makefile
include/log4cxx/private/: Makefile
include/log4cxx/rolling/: Makefile
include/log4cxx/spi/: Makefile
include/log4cxx/spi/location/: Makefile
include/log4cxx/varia/: Makefile
include/log4cxx/xml/: Makefile
lib/: libapr-1.so.0.2.12  libaprutil-1.so.0.2.12
